--- a/as3/index.html
+++ b/as3/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>AS#3 Sticky-top</title>
     <style>
         #banner>div:first-child {
             background-image: url("https://www.twreporter.org/images/20210816212208-ccec63a2dc26448767dd59db9b549806-desktop.png");
@@ -109,7 +109,7 @@
     <div class="container-fluid" style="height:30vh;background-color:#d6d0c9	; display:flex; flex-direction: row;
     justify-content: center;
     align-items: center;">
-        <h1>我的家被買走了？──這些年，流失的原住民保留地</h1>
+        <h1>《我的家被買走了？──這些年，流失的原住民保留地》作業練習版</h1>
     </div>
 
     <section id="banner" style="height:200vh;">
